Improving rendering, change the input of class name with margin and align to left, avoiding overlapping and huge space

--- a/umpleonline/scripts/styles.css
+++ b/umpleonline/scripts/styles.css
@@ -340,7 +340,12 @@ div.umpleGeneralization { cursor: pointer; background-color: black; }
     padding-top: 3px;
 }
 
-.html-element .className,
+.html-element .className {
+    text-align: left;
+    padding: 0px;
+    margin-top:0px;
+    margin-left:11px;
+}
 .html-element .stateName {
     text-align: center;
     margin: auto;
